# zkwasm-react-template

./: .env  .gitignore  Dockerfile  README.md  config-overrides.js  package-lock.json  package.json
gameplay/: Cargo.toml  Makefile  README.md  test.sh
gameplay/src/: game.rs  lib.rs  tx.rs  zkmain.rs
gameplay/src/utils/: mod.rs
rustlib/: package.json
src/: index.css  index.tsx
src/components/: Nav.tsx
src/data/: accountSlice.ts  endpoint.ts  statusSlice.ts
src/js/: game.js  game.ts  gameplay.d.ts  gameplay.wasm  gameplay.wasm_bg.js
src/layout/: Main.tsx  style.scss
src/modals/: addNewProveTask.tsx  proofInfo.tsx
src/types/: game.ts  layout.ts
src/utils/: address.ts  proof.ts
