[package]
name = "zkwasm-rust-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rlp = { version = "0.5.2", default-features = false }
zkwasm-rust-sdk = { git = "https://github.com/DelphinusLab/zkWasm-rust.git" }
wasm-bindgen = "0.2.87"
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
once_cell = "1.18.0"

#[package.metadata.wasm-pack.profile.release]
#wasm-opt = false
#rustflags = ["-C", "link-arg=--shared"]
