[package]
name = "zkwasm-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zkwasm_contract"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
test = []
protocol = []

[dependencies]
primitive-types = {version="0.12.1", default-features = false}
zkwasm-rust-sdk = { git = "https://github.com/DelphinusLab/zkWasm-rust.git", default-features = true, branch="witness-gen"}
wasm-bindgen = "0.2.83"
sha2 = "0.10.8"
